--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <img class="finalimage" src="IMAGES/Slide 1.png">
           </div>
           <div class="col">
-            <img class="finalimage" src="Images/IOS Prototype.png">
+            <img class="finalimage" src="IMAGES/IOS Prototype.png">
           </div>
         </div>
 
